--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <h1>initial</h1>
+  <header class="header">
+    <div class="container">
+      <div class="header-wrap">
+        <a class="logo" href="#">
+          <strong class="logo__company-name">Добротный & Полиглотный</strong>
+          онлайн-школа испанского языка
+        </a>
+
+        <div class="header-info">
+          <a class="header-info__link" href="mailto:dobrotnopoliglotno@gmail.com">
+            <img class="header-info__icon" src="img/email.svg" alt="">
+            dobrotnopoliglotno@gmail.com
+          </a>
+          <a class="header-info__link" href="tel:+79872563556">
+            <img class="header-info__icon" src="img/phone.svg" alt="">
+            +7 (987) 256 35-56
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- /.container -->
+  </header>
+  <!-- /.header -->
 
   <!-- Include JS -->
   <script src="lib/jquery/jquery.min.js"></script>
