Add home section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,22 @@
   </header>
   <!-- /.header -->
 
+  <main>
+    <div class="home">
+      <div class="container">
+        <div class="home-wrap">
+          <div class="home-text-wrap">
+            <div class="home-text">
+              <h2 class="home-text__title">Начните говорить <strong>по-испански</strong></h2>
+              <span class="home-text__subtitle">за 1.5 месяца онлайн-занятий <br>с носителем языка</span>
+              <button class="btn home-text__btn">Начать занятия</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
   <!-- Include JS -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="js/main.js"></script>
